--- a/app/src/main/res/layout/add_expense.xml
+++ b/app/src/main/res/layout/add_expense.xml
@@ -7,41 +7,41 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <TextView
-        android:id="@+id/add_new_budget_title"
+        android:id="@+id/add_new_expense_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:text="@string/add_new_budget"
+        android:text="@string/add_new_expense"
         android:textStyle="bold"
         android:textColor="@color/logo_yellow"
         tools:ignore="RelativeOverlap" />
 
     <EditText
-        android:id="@+id/new_budget_name"
+        android:id="@+id/expense_category_name"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:textColor="@color/logo_yellow"
         android:textColorHint="@color/logo_yellow"
-        android:layout_below="@id/add_new_budget_title"
+        android:layout_below="@id/add_new_expense_title"
         android:layout_alignParentStart="true"
         android:inputType="text"
-        android:hint="@string/new_budget_category_name"
+        android:hint="@string/expense_category_name"
         android:autofillHints="" />
 
     <EditText
-        android:id="@+id/new_budget_amount"
+        android:id="@+id/amount_spent"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:textColor="@color/logo_yellow"
         android:textColorHint="@color/logo_yellow"
-        android:layout_below="@id/new_budget_name"
+        android:layout_below="@id/expense_category_name"
         android:layout_alignParentStart="true"
         android:inputType="numberDecimal"
-        android:hint="@string/budget_max"
+        android:hint="@string/amount_spent"
         android:autofillHints="" />
 
     <ImageButton
-        android:id="@+id/add_budget_btn"
+        android:id="@+id/add_expense_btn"
         android:layout_width="75dp"
         android:layout_height="75dp"
         android:layout_alignParentEnd="true"
