--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,11 +11,10 @@
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="1125sp"
-        android:background="@color/black"
+        android:background="@color/white"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         tools:ignore="MissingConstraints"
-        android:name="edu.bloomu.budgetapp.DashboardFragment"
         />
 
     <ImageButton
