--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -7,11 +7,24 @@
     tools:context=".DashboardFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:id="@+id/DASH_FRAG"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="DASH FRAGMENT"
-        android:textSize="100dp"/>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/budget_recycler_view"
+        android:layout_height="350dp"
+        android:layout_width="600dp"
+        android:background="@drawable/rounded_main_btn"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="100dp" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/expenses_recycler_view"
+        android:layout_height="350dp"
+        android:layout_width="600dp"
+        android:background="@drawable/rounded_main_btn"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/budget_recycler_view"
+        android:layout_marginTop="100dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
