--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="logo_yellow">#FFBD58</color>
+    <color name="logo_compliment">#D2B48C </color>
+    <color name="card_text">#333333</color>
 </resources>
