--- a/app/src/main/res/drawable/adder_box.xml
+++ b/app/src/main/res/drawable/adder_box.xml
@@ -2,7 +2,7 @@
     <!-- Background shape -->
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/black" /> <!-- Background color (light gray) -->
+            <solid android:color="@color/background" /> <!-- Background color (light gray) -->
             <corners android:radius="8dp" /> <!-- Corner radius in dp -->
         </shape>
     </item>
