--- a/app/src/main/res/drawable/rounded_main_btn.xml
+++ b/app/src/main/res/drawable/rounded_main_btn.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/black"/>
+    <solid android:color="@color/background"/>
     <stroke android:color="@color/logo_yellow"/>
     <stroke android:width="2dp"/>
     <corners
