Remove Budget form added, Clear budget list button added

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -32,7 +32,7 @@
         android:fontFamily="sans-serif-medium"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="50sp"
+        android:layout_marginTop="@dimen/top_margin_login"
         app:layout_constraintTop_toBottomOf="@id/login_logo"
         app:layout_constraintBottom_toTopOf="@id/password_field"
         android:hint="@string/username"
@@ -59,7 +59,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/username_field"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="300sp"
+        android:layout_marginBottom="@dimen/bottom_margin_login"
         android:autofillHints="Password"
         android:inputType="textPassword"
         tools:ignore="LabelFor"
@@ -67,15 +67,15 @@
 
     <Button
         android:id="@+id/account_create_btn"
-        android:layout_width="200sp"
-        android:layout_height="50sp"
+        android:layout_width="@dimen/button_layout_width_login"
+        android:layout_height="@dimen/button_layout_height_login"
 
         android:alpha="0"
         android:background="@drawable/rounded_edittext_bg"
         android:text="@string/create_an_account"
         android:textColor="@color/black"
         android:fontFamily="sans-serif-medium"
-        android:textSize="15sp"
+        android:textSize="@dimen/login_text_size"
         android:layout_marginStart="150sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/password_field"
@@ -84,16 +84,16 @@
 
     <Button
         android:id="@+id/login_btn"
-        android:layout_width="200sp"
-        android:layout_height="50sp"
+        android:layout_width="@dimen/button_layout_width_login"
+        android:layout_height="@dimen/button_layout_height_login"
 
         android:alpha="0"
         android:background="@drawable/rounded_edittext_bg"
         android:text="@string/login"
         android:textColor="@color/black"
         android:fontFamily="sans-serif-medium"
-        android:textSize="15sp"
-        android:layout_marginEnd="150sp"
+        android:textSize="@dimen/login_text_size"
+        android:layout_marginEnd="@dimen/margin_end_login"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="@dimen/top_margin"
         app:layout_constraintTop_toBottomOf="@id/password_field"
