--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -1,25 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <include
         android:id="@+id/add_budget_layout"
         layout="@layout/add_budget"
-        android:layout_width="600dp"
-        android:layout_height="125dp"
-        android:layout_gravity="center|center"
-        android:layout_marginBottom="250dp"
+        android:layout_width="@dimen/form_layout_width"
+        android:layout_height="@dimen/form_layout_height"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/add_expense_layout"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         />
 
     <include
         android:id="@+id/add_expense_layout"
         layout="@layout/add_expense"
-        android:layout_width="600dp"
-        android:layout_height="125dp"
-        android:layout_gravity="center|center|center_vertical"
-        />
+        android:layout_width="@dimen/form_layout_width"
+        android:layout_height="@dimen/form_layout_height"
+        app:layout_constraintTop_toBottomOf="@+id/add_budget_layout"
+        app:layout_constraintBottom_toTopOf="@+id/remove_budget_layout"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
-</FrameLayout>
+    <include
+        android:id="@+id/remove_budget_layout"
+        layout="@layout/remove_category"
+        android:layout_width="@dimen/form_layout_width"
+        android:layout_height="@dimen/form_layout_height"
+        app:layout_constraintTop_toBottomOf="@+id/add_expense_layout"
+        app:layout_constraintBottom_toTopOf="@+id/remove_list_layout"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <include
+        android:id="@+id/remove_list_layout"
+        layout="@layout/remove_list"
+        android:layout_width="@dimen/form_layout_width"
+        android:layout_height="@dimen/form_layout_height"
+        app:layout_constraintTop_toBottomOf="@+id/remove_budget_layout"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
